fix: docker-image.yml

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: ../
+          context: .
           file: ../Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
