--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          file: https://github.com/osman-koc/en-yakin-eczane-telegram-botu/blob/master/Dockerfle
+          file: https://raw.github.com/osman-koc/en-yakin-eczane-telegram-botu/master/Dockerfle
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
