feat: move google maps uri to env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-TELEGRAM_BOT_TOKEN=
-COLLECT_API_TOKEN=
+TELEGRAM_BOT_TOKEN=<your_telegram_bot_token>
+COLLECT_API_TOKEN=<your_collect_api_token>
+COLLECT_API_URI=https://api.collectapi.com/health/dutyPharmacy
+OPENSTREETMAP_URI=https://nominatim.openstreetmap.org/reverse
+GOOGLE_MAPS_URI=https://www.google.com/maps/search/?api=1
