--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ COLLECT_API_TOKEN=<your_collect_api_token>
 COLLECT_API_URI=https://api.collectapi.com/health/dutyPharmacy
 OPENSTREETMAP_URI=https://nominatim.openstreetmap.org/reverse
 GOOGLE_MAPS_URI=https://www.google.com/maps/search/?api=1
+MY_API_URI=http://localhost:3000
