feat: Add USE_COLLECT_API env and modify README

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 TELEGRAM_BOT_TOKEN=<your_telegram_bot_token>
+USE_COLLECT_API=true
 COLLECT_API_TOKEN=<your_collect_api_token>
 COLLECT_API_URI=https://api.collectapi.com/health/dutyPharmacy
 OPENSTREETMAP_URI=https://nominatim.openstreetmap.org/reverse
