--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,8 @@ COLLECT_API_TOKEN=<your_collect_api_token>
 COLLECT_API_URI=https://api.collectapi.com/health/dutyPharmacy
 OPENSTREETMAP_URI=https://nominatim.openstreetmap.org/reverse
 GOOGLE_MAPS_URI=https://www.google.com/maps/search/?api=1
+GOOGLE_SHEET_API_URI=https://www.googleapis.com/auth/spreadsheets
 MY_API_URI=http://localhost:3000
+GOOGLE_SHEET_RANGE='Usage!A:E'
+GOOGLE_SHEETS_CREDENTIALS=
+GOOGLE_SHEET_ID=
