chore: modify env.example

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ COLLECT_API_TOKEN=<your_collect_api_token>
 COLLECT_API_URI=https://api.collectapi.com/health/dutyPharmacy
 OPENSTREETMAP_URI=https://nominatim.openstreetmap.org/reverse
 GOOGLE_MAPS_URI=https://www.google.com/maps/search/?api=1
-MY_API_URI=http://localhost:3000
+MY_API_URI=<your_custom_api_uri_if_its_exists>
