feat: Modify My Api using

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ COLLECT_API_URI=https://api.collectapi.com/health/dutyPharmacy
 OPENSTREETMAP_URI=https://nominatim.openstreetmap.org/reverse
 GOOGLE_MAPS_URI=https://www.google.com/maps/search/?api=1
 MY_API_URI=<your_custom_api_uri_if_its_exists>
+MY_API_KEY=<your_custom_api_key_if_its_exists>
