--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enyakineczanebot",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Yakındaki veya nöbetçi eczaneleri sorgulamak için Telegram botu",
   "type": "module",
   "repository": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "geolib": "^3.3.4",
+    "grammy": "^1.36.3",
     "query-string": "^9.0.0"
   }
 }
